--- a/TEMA 0/Lawrence.html
+++ b/TEMA 0/Lawrence.html
@@ -7,7 +7,7 @@
 <body>
 
 <h1>Lawrence de Arabia</h1>
-<p>Lawrence de Arabia fue un británico que empezó como arqueólogo en Oriente Próximo y terminó convirtiéndose en un personaje clave en la Primera Guerra Mundial. Allí ayudó a organizar y liderar la Revolución Árabe contra los turcos otomanos, usando tácticas de guerrilla y uniendo a tribus que normalmente estaban enfrentadas.</p>
+<p>Lawrence de Arabia fue un británico que empezó como arqueólogo en Oriente Próximo y terminó convirtiéndose en un personaje clave en la Primera Guerra Mundial. <br> Allí ayudó a organizar y liderar la Revolución Árabe contra los turcos otomanos, usando tácticas de guerrilla y uniendo a tribus que normalmente estaban enfrentadas.</p>
 
 </body>
 </html>
