--- a/TEMA1/EJERCICIO17/ejercicio17html.html
+++ b/TEMA1/EJERCICIO17/ejercicio17html.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+</style>
+</head>
+<body>
 
+<h1>Resultado de la búsqueda</h1>
+<p style="text-align:center;">Resultado de la búsqueda</p>
+
+<table style="width:100%">
+  <tr>
+    <th>Imagen</th>
+    <th>Datos</th>
+  </tr>
+  <tr>
+    <td><img scr=""></td>
+    <td>
+    <p style="color:blue;"><b>Portátil - 3 GHz - 4 GB RAM </b></p>
+    <p><span style="color:blue;text-decoration: underline;">Comprar:</span> <del>2.990$</del> <b>2.599$</b></p></td>
+  </tr>
+   <tr>
+    <td><img scr=""></td>
+    <td>
+    <p style="color:blue;"><b>Videocámara - Alta definición 1080p - 60 GB</b></p>
+    <p><span style="color:blue;text-decoration: underline;">Comprar:</span> <del>1.099$</del> <b>999$</b> </p>
+    </td>
+  </tr>
+   <tr>
+    <td><img scr=""></td>
+    <td>
+    <p style="color:blue;"><b>Televisor - 46" - FULL HD</b></p>
+    <p><span style="color:blue;text-decoration: underline;">Comprar:</span> <del>1.999$</del> <b>1.799$</b></p>
+    </td>
+  </tr>
+   <tr>
+    <td><img scr=""></td>
+    <td>
+    <p style="color:blue;"><b>Móvil - 3G - WiFi - 8 GB</b></p>
+    <p><span style="color:blue;text-decoration: underline;">Comprar:</span> <del>399$</del> <b>349$</b></p>
+    </td>
+  </tr>
+</table>
+
+</body>
+</html>
