--- a/TEMA1/EJERCICIO17/ejercicio17html.html
+++ b/TEMA1/EJERCICIO17/ejercicio17html.html
@@ -20,27 +20,27 @@ table, th, td {
     <th>Datos</th>
   </tr>
   <tr>
-    <td><img scr="./portatil.png" style="width:50px;height:50px;"></td>
+    <td><img scr="portatil.png"></td>
     <td>
     <p style="color:blue;"><b>Portátil - 3 GHz - 4 GB RAM </b></p>
     <p><span style="color:blue;text-decoration: underline;">Comprar:</span> <del>2.990$</del> <b>2.599$</b></p></td>
   </tr>
    <tr>
-    <td><img scr="./videocamara.png"></td>
+    <td><img scr="videocamara.png"></td>
     <td>
     <p style="color:blue;"><b>Videocámara - Alta definición 1080p - 60 GB</b></p>
     <p><span style="color:blue;text-decoration: underline;">Comprar:</span> <del>1.099$</del> <b>999$</b> </p>
     </td>
   </tr>
    <tr>
-    <td><img scr="./tv.png"></td>
+    <td><img scr="tv.png"></td>
     <td>
     <p style="color:blue;"><b>Televisor - 46" - FULL HD</b></p>
     <p><span style="color:blue;text-decoration: underline;">Comprar:</span> <del>1.999$</del> <b>1.799$</b></p>
     </td>
   </tr>
    <tr>
-    <td><img scr="./movil.png"></td>
+    <td><img scr="movil.png"></td>
     <td>
     <p style="color:blue;"><b>Móvil - 3G - WiFi - 8 GB</b></p>
     <p><span style="color:blue;text-decoration: underline;">Comprar:</span> <del>399$</del> <b>349$</b></p>
