--- a/TEMA1/EJERCICIO17/ejercicio17html.html
+++ b/TEMA1/EJERCICIO17/ejercicio17html.html
@@ -22,27 +22,27 @@ table, th, td {
   <tr>
     <td><img src="portatil.png" align="center"></td>
     <td>
-    <p style="color:blue;"><b>Portátil - 3 GHz - 4 GB RAM </b></p>
+    <p style="color:blue;text-decoration: underline;"><b>Portátil - 3 GHz - 4 GB RAM </b></p>
     <p><span style="color:blue;text-decoration: underline;">Comprar:</span> <del>2.990$</del> <b>2.599$</b></p></td>
   </tr>
    <tr>
     <td><img src="videocamara.png" align="center"></td>
     <td>
-    <p style="color:blue;"><b>Videocámara - Alta definición 1080p - 60 GB</b></p>
+    <p style="color:blue;text-decoration: underline;"><b>Videocámara - Alta definición 1080p - 60 GB</b></p>
     <p><span style="color:blue;text-decoration: underline;">Comprar:</span> <del>1.099$</del> <b>999$</b> </p>
     </td>
   </tr>
    <tr>
     <td><img src="tv.png" align="center"></td>
     <td>
-    <p style="color:blue;"><b>Televisor - 46" - FULL HD</b></p>
+    <p style="color:blue;text-decoration: underline;"><b>Televisor - 46" - FULL HD</b></p>
     <p><span style="color:blue;text-decoration: underline;">Comprar:</span> <del>1.999$</del> <b>1.799$</b></p>
     </td>
   </tr>
    <tr>
     <td><img src="movil.png" align="center"></td>
     <td>
-    <p style="color:blue;"><b>Móvil - 3G - WiFi - 8 GB</b></p>
+    <p style="color:blue;text-decoration: underline;"><b>Móvil - 3G - WiFi - 8 GB</b></p>
     <p><span style="color:blue;text-decoration: underline;">Comprar:</span> <del>399$</del> <b>349$</b></p>
     </td>
   </tr>
