--- a/TEMA1/EJERCICIO17/ejercicio17html.html
+++ b/TEMA1/EJERCICIO17/ejercicio17html.html
@@ -13,14 +13,14 @@ table, th, td {
 <h1>Resultado de la búsqueda</h1>
 <p style="text-align:center;">Resultado de la búsqueda</p>
 
-<table style="width:100%">
+<table>
   
   <tr>
     <th>Imagen</th>
     <th>Datos</th>
   </tr>
   <tr>
-    <td><img src="portatil.png" align="center"></td>
+    <td><img src="portatil.png" ></td>
     <td>
     <p style="color:blue;text-decoration: underline;"><b>Portátil - 3 GHz - 4 GB RAM </b></p>
     <p><span style="color:blue;text-decoration: underline;">Comprar:</span> <del>2.990$</del> <b>2.599$</b></p></td>
