--- a/TEMA1/EJERCICIO17/ejercicio17html.html
+++ b/TEMA1/EJERCICIO17/ejercicio17html.html
@@ -5,6 +5,7 @@
 table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
+  padding: 15px 15px;
 }
 </style>
 </head>
@@ -20,7 +21,7 @@ table, th, td {
     <th>Datos</th>
   </tr>
   <tr>
-    <td><img src="portatil.png" style="text-align:center;" ></td>
+    <td><img src="portatil.png"  ></td>
     <td>
     <p style="color:blue;text-decoration: underline;"><b>Portátil - 3 GHz - 4 GB RAM </b></p>
     <p><span style="color:blue;text-decoration: underline;">Comprar:</span> <del>2.990$</del> <b>2.599$</b></p></td>
