--- a/TEMA1/EJERCICIO18/ejercicio18html.html
+++ b/TEMA1/EJERCICIO18/ejercicio18html.html
@@ -1,1 +1,50 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+</style>
+</head>
+<body>
 
+<table style="width:100%">
+  <tr>
+    <th></th>
+    <th colspan="3"><img src="mp3_pequeno_blanco"><img src="mp3_pequeno_negro">MP3 mini</th>
+    <th colspan="2">MP3 grande</th>
+  </tr>
+  <tr>
+    <td>Capacidad de almacenamiento</td>
+    <td>4GB (1.000 canciones)</td>
+    <td>8GB (2.000 canciones)</td>
+    <td>16GB (4.000 canciones)</td>
+    <td >30GB (7.500 canciones)</td>
+    <td>80GB (20.000 canciones)</td>
+  </tr>
+   <tr>
+    <td>Colores</td>
+    <td>Gris</td>
+    <td>Gris oscuro, verde claro, verde oscuro, rojo</td>
+    <td>Gris oscuro</td>
+    <td colspan="2">Gris claro, gris oscuro</td>
+  </tr>
+   <tr>
+    <td>Pantalla</td>
+    <td colspan="3">LCD de 3 cm (diagonal) con retroiluminación</td>
+    <td colspan="2">LCD de 6 cm (diagonal) con retroiluminación</td>
+  </tr>
+   <tr>
+    <td rowspan="2">Tiempo de carga</td>
+   
+ 
+    <td colspan="3" rowspan="2">Unas 3 horas</td>
+    <td colspan="2">Unas 4 horas</td>
+  </tr>
+  <td colspan="2"> Unas 2 horas para alcanzar el 80% de la capacidad</td>
+</table>
+
+</body>
+</html>
