--- a/TEMA1/EJERCICIO18/ejercicio18html.html
+++ b/TEMA1/EJERCICIO18/ejercicio18html.html
@@ -13,7 +13,7 @@ table, th, td {
 <table style="width:100%">
   <tr>
     <th></th>
-    <th colspan="3"><img src="mp3_pequeno_blanco.png"><p>MP3 mini</p></th>
+    <th colspan="3"><p><img src="mp3_pequeno_blanco.png"></p><p>MP3 mini</p></th>
     <th colspan="2">MP3 grande</th>
   </tr>
   <tr>
