--- a/TEMA1/EJERCICIO27/ejercicio27html.html
+++ b/TEMA1/EJERCICIO27/ejercicio27html.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html>
+<body>
+
+<h3>Lola Montez, by Volbeat</h3>
+
+<audio controls autoplay muted>
+  <source src="Lola Montez.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+
+</body>
+</html>
 
