--- a/TEMA1/EJERCICIO18/ejercicio18html.html
+++ b/TEMA1/EJERCICIO18/ejercicio18html.html
@@ -13,8 +13,8 @@ table, th, td {
 <table style="width:100%">
   <tr>
     <th></th>
-    <th colspan="3"><p><img src="mp3_pequeno_blanco.png"></p><p>MP3 mini</p></th>
-    <th colspan="2">MP3 grande</th>
+    <th colspan="3"><p><img src="mp3_pequeno_blanco.png"><img src="mp3_pequeno_negro.png"></p><p>MP3 mini</p></th>
+    <th colspan="2"><p><img src="mp3_grande_blanco.png"><img src="mp3_grande_negro.png"></p><p>MP3 grande</p></th>
   </tr>
   <tr>
     <td>Capacidad de almacenamiento</td>
