--- a/TEMA1/EJERCICIO18/ejercicio18html.html
+++ b/TEMA1/EJERCICIO18/ejercicio18html.html
@@ -26,9 +26,9 @@ table, th, td {
   </tr>
    <tr>
     <td>Colores</td>
-    <td>Gris</td>
+    <td><img src="color_blanco.png"></td>
     <td>Gris oscuro, verde claro, verde oscuro, rojo</td>
-    <td>Gris oscuro</td>
+    <td><img src="color_blanco.png"><img src="color_negro.png"></td>
     <td colspan="2">Gris claro, gris oscuro</td>
   </tr>
    <tr>
