--- a/TEMA1/EJERCICIO18/ejercicio18html.html
+++ b/TEMA1/EJERCICIO18/ejercicio18html.html
@@ -5,6 +5,7 @@
 table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
+  padding: 15px 15px;
 }
 </style>
 </head>
@@ -27,9 +28,9 @@ table, th, td {
    <tr>
     <td>Colores</td>
     <td><img src="color_blanco.png"></td>
-    <td>Gris oscuro, verde claro, verde oscuro, rojo</td>
-    <td><img src="color_blanco.png"><img src="color_negro.png"></td>
-    <td colspan="2">Gris claro, gris oscuro</td>
+    <td><img src="color_negro.png"><img src="color_verde.png"><img src="color_azul.png"><img src="color_rosa.png"></td>
+    <td><img src="color_negro.png"></td>
+    <td colspan="2"><img src="color_blanco.png"><img src="color_negro.png"></td>
   </tr>
    <tr>
     <td>Pantalla</td>
