--- a/TEMA1/EJERCICIO18/ejercicio18html.html
+++ b/TEMA1/EJERCICIO18/ejercicio18html.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <style>
+div {
+  margin:auto;
+}
 table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
@@ -27,8 +30,8 @@ table, th, td {
   </tr>
    <tr>
     <td>Colores</td>
-    <td><img src="color_blanco.png"></td>
-    <td><img src="color_negro.png"><img src="color_verde.png"><img src="color_azul.png"><img src="color_rosa.png"></td>
+    <td><div><img src="color_blanco.png"></div></td>
+    <td><div><img src="color_negro.png"><img src="color_verde.png"><img src="color_azul.png"><img src="color_rosa.png"></div></td>
     <td><img src="color_negro.png"></td>
     <td colspan="2"><img src="color_blanco.png"><img src="color_negro.png"></td>
   </tr>
