--- a/TEMA1/EJERCICIO18/ejercicio18html.html
+++ b/TEMA1/EJERCICIO18/ejercicio18html.html
@@ -2,13 +2,11 @@
 <html>
 <head>
 <style>
-div {
-  margin:auto;
-}
 table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
   padding: 15px 15px;
+  text-align:center;
 }
 </style>
 </head>
