--- a/TEMA1/EJERCICIO18/ejercicio18html.html
+++ b/TEMA1/EJERCICIO18/ejercicio18html.html
@@ -15,8 +15,8 @@ table, th, td {
 <table style="width:100%">
   <tr>
     <th></th>
-    <th colspan="3"><p><img src="mp3_pequeno_blanco.png"><img src="mp3_pequeno_negro.png"></p><p>MP3 mini</p></th>
-    <th colspan="2"><p><img src="mp3_grande_blanco.png"><img src="mp3_grande_negro.png"></p><p>MP3 grande</p></th>
+    <th colspan="3"><img src="mp3_pequeno_blanco.png"><img src="mp3_pequeno_negro.png"><p>MP3 mini</p></th>
+    <th colspan="2"><img src="mp3_grande_blanco.png"><img src="mp3_grande_negro.png"><p>MP3 grande</p></th>
   </tr>
   <tr>
     <td>Capacidad de almacenamiento</td>
@@ -40,12 +40,12 @@ table, th, td {
   </tr>
    <tr>
     <td rowspan="2">Tiempo de carga</td>
-   
- 
     <td colspan="3" rowspan="2">Unas 3 horas</td>
     <td colspan="2">Unas 4 horas</td>
   </tr>
-  <td colspan="2"> Unas 2 horas para alcanzar el 80% de la capacidad</td>
+  <tr>
+   <td colspan="2"> Unas 2 horas para alcanzar el 80% de la capacidad</td>
+  </tr>
 </table>
 
 </body>
