--- a/TEMA1/EJERCICIO18/ejercicio18html.html
+++ b/TEMA1/EJERCICIO18/ejercicio18html.html
@@ -6,7 +6,11 @@ table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
   padding: 15px 15px;
-  text-align:center;
+  text-align: center;
+}
+td img, th img {
+  display: block;
+  margin: auto;
 }
 </style>
 </head>
