--- a/TEMA1/EJERCICIO18/ejercicio18html.html
+++ b/TEMA1/EJERCICIO18/ejercicio18html.html
@@ -9,7 +9,7 @@ table, th, td {
   text-align: center;
 }
 td img, th img {
-  display: block;
+  display: inline-block;
   margin: auto;
 }
 </style>
