--- a/TEMA1/EJERCICIO19/ejercicio19html.html
+++ b/TEMA1/EJERCICIO19/ejercicio19html.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html>
+<body>
+
+
+<p>
+<img src="batman.png" style="float:right;">
+A paragraph with a floating image. A paragraph with a floating image. A paragraph with a floating image.
+</p>
+
+
+<p>
+<img src="superman.png" style="float:right;">
+A paragraph with a floating image. A paragraph with a floating image. A paragraph with a floating image.  
+</p>
+
+</body>
+</html>
 
