--- a/TEMA1/EJERCICIO20/ejercicio20html.html
+++ b/TEMA1/EJERCICIO20/ejercicio20html.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+<body>
+
+<img src="smiley.gif" alt="Smiley face" style="float:left">
+<img src="smiley.gif" alt="Smiley face" style="float:left">
+<img src="smiley.gif" alt="Smiley face" style="float:left">
+
+</body>
+</html>
+
 
