--- a/TEMA1/EJERCICIO20/ejercicio20html.html
+++ b/TEMA1/EJERCICIO20/ejercicio20html.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<img src="smiley.gif" alt="Smiley face" style="float:left">
-<img src="smiley.gif" alt="Smiley face" style="float:left">
-<img src="smiley.gif" alt="Smiley face" style="float:left">
+<img src="trulli.png" alt="Trulli" style="float:left">
+<img src="chica_con_gorro.png" alt="Chica con gorro" style="float:left">
+<img src="calle.png" alt="Calle" style="float:left">
 
 </body>
 </html>
