--- a/TEMA1/EJERCICIO21/ejercicio21html.html
+++ b/TEMA1/EJERCICIO21/ejercicio21html.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+img {
+  float: left;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 150px;
+}
+
+img:hover {
+  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
+</style>
+</head>
+<body>
+
+<h2>Imágenes en miniatura: Villanos de los 4 fantásticos</h2>
+<p>Click en las imágenes para agrandarlas</p>
+
+<a target="_blank" href="doom.png">
+  <img src="doom.png" alt="Doom" style="width:150px">
+</a>
+<a target="_blank" href="galactus.png">
+  <img src="galactus.png" alt="Galactus" style="width:150px">
+</a>
+<a target="_blank" href="namor.png">
+  <img src="namor.png" alt="Namor" style="width:150px">
+</a>
+<a target="_blank" href="annhilus.png">
+  <img src="annhilus.png" alt="Annhilus" style="width:150px">
+</a>
+
+
+
+
+  
+</body>
+</html>
 
