--- a/WEB4U/w4uhtmles.html
+++ b/WEB4U/w4uhtmles.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<title>Web4U - Desarrollo y Diseño Web Profesional</title>
+<title>Web4U</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -90,21 +90,17 @@ footer {
 <body>
 
 <h2 style="text-align:center; padding-top:10px;">Bienvenido a Web4U</h2>
-<p style="text-align:center;">Soluciones web modernas, profesionales y adaptadas a ti.</p>
 
 <header>
-  <h2>Web4U</h2>
-  <p style="font-size:18px; color:white; margin-top:10px;">Desarrollo Web · Diseño · Optimización · Hosting</p>
+  <h2>HTML</h2>
 </header>
 
 <section>
   <nav>
     <ul>
-      <li><a href="#">Inicio</a></li>
-      <li><a href="#">Servicios</a></li>
-      <li><a href="#">Portfolio</a></li>
-      <li><a href="#">Precios</a></li>
-      <li><a href="#">Contacto</a></li>
+      <li><a href="#">HTML</a></li>
+      <li><a href="#">SVG</a></li>
+      <li><a href="#">CSS</a></li> 
     </ul>
   </nav>
   
@@ -114,13 +110,13 @@ footer {
 
     <!-- TABLE OF CONTENTS -->
     <div class="toc-box">
-      <h2>📌 Tabla de Contenidos</h2>
+      <h2>Tabla de Contenidos</h2>
       <ul>
-        <li><a href="#titulos">1. &lt;h1&gt; y &lt;h2&gt;</a></li>
-        <li><a href="#enlaces">2. &lt;a&gt;</a></li>
-        <li><a href="#imagenes">3. &lt;img&gt;</a></li>
-        <li><a href="#formularios">4. &lt;form&gt;</a></li>
-        <li><a href="#tablas">5. &lt;table&gt;</a></li>
+        <li><a href="#titulos">Headers</a></li>
+        <li><a href="#enlaces">Enlaces</a></li>
+        <li><a href="#imagenes">Imágenes</a></li>
+        <li><a href="#formularios">Formularios</a></li>
+        <li><a href="#tablas">Tablas</a></li>
       </ul>
     </div>
 
