--- a/WEB4U/w4uhtmles.html
+++ b/WEB4U/w4uhtmles.html
@@ -234,7 +234,11 @@ footer {
 </section>
 
 <footer>
-  <p>Web4U © 2025 · Todos los derechos reservados · info@web4u.es</p>
+  <p>Web4U © 2025 · José Manuel Moreno Raya.</p>
+ <p><a href="https://www.w3schools.com/html/html_tables.asp" target="_blank">
+       Inglés
+      </a>
+    </p>
 </footer>
 
 </body>
