--- a/WEB4U/w4usvges.html
+++ b/WEB4U/w4usvges.html
@@ -1,1 +1,232 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<title>Web4U - SVG</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<style>
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+}
+
+/* Style the header */
+header {
+  background-color: #1e1e1e;
+  padding: 30px;
+  text-align: center;
+  font-size: 35px;
+  color: #00d0ff;
+  letter-spacing: 2px;
+}
+
+/* Create two columns/boxes */
+nav {
+  float: left;
+  width: 25%;
+  background: #ccc;
+  padding: 20px;
+}
+
+nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+nav a {
+  text-decoration: none;
+  font-weight: bold;
+  color: #333;
+}
+
+nav a:hover {
+  color: #00a8cc;
+}
+
+article {
+  float: left;
+  padding: 20px;
+  width: 75%;
+  background-color: #f7f7f7;
+  min-height: 350px;
+}
+
+section::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Footer */
+footer {
+  background-color: #1e1e1e;
+  padding: 10px;
+  text-align: center;
+  color: white;
+  font-size: 14px;
+}
+
+@media (max-width: 600px) {
+  nav, article {
+    width: 100%;
+    height: auto;
+  }
+}
+
+.toc-box {
+  background: #e2e2e2;
+  padding: 15px;
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+</style>
+</head>
+
+<body>
+
+<h2 style="text-align:center; padding-top:10px;">Bienvenido a Web4U</h2>
+
+<header>
+  <h2>SVG</h2>
+</header>
+
+<section>
+  <nav>
+    <ul>
+      <li><a href="html.html">HTML</a></li>
+      <li><a href="svg.html">SVG</a></li>
+      <li><a href="css.html">CSS</a></li> 
+    </ul>
+  </nav>
+  
+  <article>
+    <h1>Etiquetas SVG Fundamentales</h1>
+    <p>A continuación encontrarás explicaciones y ejemplos de algunas etiquetas esenciales de SVG.</p>
+
+    <!-- TABLE OF CONTENTS -->
+    <div class="toc-box">
+      <h2>Tabla de Contenidos</h2>
+      <ul>
+        <li><a href="#svg">1. Contenedor &lt;svg&gt;</a></li>
+        <li><a href="#rect">2. Rectángulos &lt;rect&gt;</a></li>
+        <li><a href="#circle">3. Círculos &lt;circle&gt;</a></li>
+        <li><a href="#path">4. Caminos &lt;path&gt;</a></li>
+        <li><a href="#text">5. Texto &lt;text&gt;</a></li>
+      </ul>
+    </div>
+
+    <!-- ======================= -->
+    <!--     ETIQUETA <svg>      -->
+    <!-- ======================= -->
+
+    <h2 id="svg">1. Contenedor &lt;svg&gt;</h2>
+    <p>El contenedor principal para gráficos SVG. Todo elemento SVG debe estar dentro de él.</p>
+
+    <pre><code>
+&lt;svg width="200" height="200"&gt;
+  &lt;!-- Aquí van los elementos gráficos --&gt;
+&lt;/svg&gt;
+    </code></pre>
+
+    <p>
+      Más información:  
+      <a href="https://www.w3schools.com/graphics/svg_intro.asp" target="_blank">
+        W3Schools — Introducción a SVG
+      </a>
+    </p>
+
+    <!-- ======================= -->
+    <!--     ETIQUETA <rect>     -->
+    <!-- ======================= -->
+
+    <h2 id="rect">2. Rectángulos &lt;rect&gt;</h2>
+    <p>Permite dibujar rectángulos dentro del SVG.</p>
+
+    <pre><code>
+&lt;svg width="200" height="200"&gt;
+  &lt;rect x="10" y="10" width="100" height="50" fill="blue"&gt;&lt;/rect&gt;
+&lt;/svg&gt;
+    </code></pre>
+
+    <p>
+      Más información:  
+      <a href="https://www.w3schools.com/graphics/svg_rect.asp" target="_blank">
+        W3Schools — Rectángulos SVG
+      </a>
+    </p>
+
+    <!-- ======================= -->
+    <!--     ETIQUETA <circle>   -->
+    <!-- ======================= -->
+
+    <h2 id="circle">3. Círculos &lt;circle&gt;</h2>
+    <p>Dibuja un círculo en el SVG usando coordenadas y radio.</p>
+
+    <pre><code>
+&lt;svg width="200" height="200"&gt;
+  &lt;circle cx="50" cy="50" r="40" fill="red"&gt;&lt;/circle&gt;
+&lt;/svg&gt;
+    </code></pre>
+
+    <p>
+      Más información:  
+      <a href="https://www.w3schools.com/graphics/svg_circle.asp" target="_blank">
+        W3Schools — Círculos SVG
+      </a>
+    </p>
+
+    <!-- ======================= -->
+    <!--     ETIQUETA <path>     -->
+    <!-- ======================= -->
+
+    <h2 id="path">4. Caminos &lt;path&gt;</h2>
+    <p>Se utiliza para dibujar formas complejas definiendo una ruta con comandos.</p>
+
+    <pre><code>
+&lt;svg width="200" height="200"&gt;
+  &lt;path d="M10 80 C 40 10, 65 10, 95 80 S 150 150, 180 80" stroke="black" fill="transparent"&gt;&lt;/path&gt;
+&lt;/svg&gt;
+    </code></pre>
+
+    <p>
+      Más información:  
+      <a href="https://www.w3schools.com/graphics/svg_path.asp" target="_blank">
+        W3Schools — Path SVG
+      </a>
+    </p>
+
+    <!-- ======================= -->
+    <!--     ETIQUETA <text>     -->
+    <!-- ======================= -->
+
+    <h2 id="text">5. Texto &lt;text&gt;</h2>
+    <p>Permite agregar texto dentro de un gráfico SVG.</p>
+
+    <pre><code>
+&lt;svg width="200" height="200"&gt;
+  &lt;text x="10" y="50" font-family="Arial" font-size="20" fill="green"&gt;Hola SVG&lt;/text&gt;
+&lt;/svg&gt;
+    </code></pre>
+
+    <p>
+      Más información:
+      <a href="https://www.w3schools.com/graphics/svg_text.asp" target="_blank">
+        W3Schools — Texto SVG
+      </a>
+    </p>
+
+  </article>
+</section>
+
+<footer>
+  <p>Web4U © 2025 · José Manuel Moreno Raya.</p>
+</footer>
+
+</body>
+</html>
 
