--- a/WEB4U/w4uindexes.html
+++ b/WEB4U/w4uindexes.html
@@ -126,7 +126,7 @@ footer {
     <!-- Miniaturas de lenguajes -->
     <div>
       <a href="html.html" class="language-box" title="Aprender HTML">
-        <img src="imagenes/html-logo.png" alt="Logo HTML">
+        <img src="IMAGES/LOGOHTML.png" alt="Logo HTML">
         <p>HTML</p>
       </a>
 
