--- a/WEB4U/w4uindexes.html
+++ b/WEB4U/w4uindexes.html
@@ -131,12 +131,12 @@ footer {
       </a>
 
       <a href="svg.html" class="language-box" title="Aprender SVG">
-        <img src="imagenes/svg-logo.png" alt="Logo SVG">
+        <img src="IMAGES/LOGOSVG.png" alt="Logo SVG">
         <p>SVG</p>
       </a>
 
       <a href="css.html" class="language-box" title="Aprender CSS">
-        <img src="imagenes/css-logo.png" alt="Logo CSS">
+        <img src="IMAGES/LOGOCSS.png" alt="Logo CSS">
         <p>CSS</p>
       </a>
     </div>
