--- a/WEB4U/w4uhtmles.html
+++ b/WEB4U/w4uhtmles.html
@@ -234,8 +234,8 @@ footer {
 </section>
 
 <footer>
-  <p>Web4U © 2025 · José Manuel Moreno Raya.</p>
- <p><a href="https://www.w3schools.com/html/html_tables.asp" target="_blank">
+  <p>Web4U. José Manuel Moreno Raya.</p>
+ <p><a href="w4uhtmleng.html" target="_blank">
        Inglés
       </a>
     </p>
