--- a/WEB4U/w4uhtmleng.html
+++ b/WEB4U/w4uhtmleng.html
@@ -284,10 +284,9 @@ footer {
     <!-- ======================= -->
 
 
+<h2 id="enlaces">2. &lt;a&gt; Tag — Links</h2>
 
-    <h2 id="enlaces">2. Etiqueta &lt;a&gt; — Enlaces</h2>
-
-    <p>Crea un hipervínculo a otra web, documento o sección interna.</p>
+    <p>reates a hyperlink to another website, document, or internal section</p>
 
 
 
@@ -295,7 +294,7 @@ footer {
 
 &lt;a href="https://www.google.com" title="Ir a Google"&gt;
 
-  Ir a Google
+ Go to Google
 
 &lt;/a&gt;
 
@@ -305,11 +304,11 @@ footer {
 
     <p>
 
-      Más información:  
+      More information: 
 
       <a href="https://www.w3schools.com/tags/tag_a.asp" target="_blank">
 
-        W3Schools — Etiqueta &lt;a&gt;
+        W3Schools — &lt;a&gt; Tag
 
       </a>
 
@@ -325,27 +324,24 @@ footer {
 
 
 
-    <h2 id="imagenes">3. Etiqueta &lt;img&gt; — Imágenes</h2>
+    <h2 id="imagenes">3. &lt;img&gt; Tag — Images</h2>
 
-    <p>Inserta imágenes en la página. No tiene etiqueta de cierre.</p>
+    <p>Inserts images into the page. It does not have a closing tag</p>
 
 
-
-    <pre><code>
-
-&lt;img src="imagenes/logo.png" alt="Logo de ejemplo" width="200"&gt;
-
+<pre><code>
+&lt;img src="imagenes/logo.png" alt="Example logo" width="200"&gt;
     </code></pre>
 
 
 
     <p>
 
-      Más información:  
+   More information:  
 
       <a href="https://www.w3schools.com/tags/tag_img.asp" target="_blank">
 
-        W3Schools — Etiqueta &lt;img&gt;
+       W3Schools — &lt;img&gt; Tag
 
       </a>
 
@@ -361,43 +357,33 @@ footer {
 
 
 
-    <h2 id="formularios">4. Etiqueta &lt;form&gt; — Formularios</h2>
+    <h2 id="formularios">4. &lt;form&gt; Tag — Forms</h2>
 
-    <p>Permiten enviar datos al servidor.</p>
-
-
-
-    <pre><code>
-
-&lt;form action="procesar.php" method="post"&gt;
-
-  &lt;label&gt;Nombre:&lt;/label&gt;
-
-  &lt;input type="text" name="nombre"&gt;
+    <p>Allows sending data to the server</p>
 
 
+
+   <pre><code>
+&lt;form action="process.php" method="post"&gt;
+  &lt;label&gt;Name:&lt;/label&gt;
+  &lt;input type="text" name="name"&gt;
 
   &lt;label&gt;Email:&lt;/label&gt;
-
   &lt;input type="email" name="email"&gt;
 
-
-
-  &lt;input type="submit" value="Enviar"&gt;
-
+  &lt;input type="submit" value="Submit"&gt;
 &lt;/form&gt;
-
     </code></pre>
 
 
 
     <p>
 
-      Más información:  
+     More information:  
 
       <a href="https://www.w3schools.com/html/html_forms.asp" target="_blank">
 
-        W3Schools — Formularios HTML
+        W3Schools — HTML Forms
 
       </a>
 
@@ -413,45 +399,32 @@ footer {
 
 
 
-    <h2 id="tablas">5. Etiqueta &lt;table&gt; — Tablas</h2>
+    <h2 id="tablas">5. &lt;table&gt; Tag — Tables</h2>
 
-    <p>Organiza datos en filas y columnas.</p>
+    <p>Organizes data into rows and columns</p>
 
 
-
-    <pre><code>
-
+<pre><code>
 &lt;table border="1"&gt;
-
   &lt;tr&gt;
-
-    &lt;th&gt;Producto&lt;/th&gt;
-
-    &lt;th&gt;Precio&lt;/th&gt;
-
+    &lt;th&gt;Product&lt;/th&gt;
+    &lt;th&gt;Price&lt;/th&gt;
   &lt;/tr&gt;
-
   &lt;tr&gt;
-
     &lt;td&gt;Chocolate&lt;/td&gt;
-
     &lt;td&gt;2€&lt;/td&gt;
-
   &lt;/tr&gt;
-
 &lt;/table&gt;
-
     </code></pre>
-
 
 
     <p>
 
-      Más información:
+     More information:
 
       <a href="https://www.w3schools.com/html/html_tables.asp" target="_blank">
 
-        W3Schools — Tablas HTML
+       W3Schools — HTML Tables
 
       </a>
 
@@ -469,9 +442,9 @@ footer {
 
   <p>Web4U. José Manuel Moreno Raya.</p>
 
- <p><a href="https://www.w3schools.com/html/html_tables.asp" target="_blank">
+ <p><a href="w4uhtmles.html" target="_blank">
 
-       Inglés
+       Spanish
 
       </a>
 
