--- a/WEB4U/w4uindexes.html
+++ b/WEB4U/w4uindexes.html
@@ -127,19 +127,19 @@ footer {
 
     <!-- Miniaturas de lenguajes -->
     <div>
-      <a href="html.html" class="language-box" title="Aprender HTML">
+      <a href="w4uhtmles.html" class="language-box" title="Aprender HTML">
         <img src="IMAGES/LOGOHTML.png" alt="Logo HTML">
         <p>HTML</p>
       </a>
 
-      <a href="svg.html" class="language-box" title="Aprender SVG">
+      <a href="w4usvges.html" class="language-box" title="Aprender SVG">
         <img src="IMAGES/LOGOSVG.png" alt="Logo SVG">
         <p>SVG</p>
       </a>
 
-      <a href="css.html" class="language-box" title="Aprender CSS">
+      <a href="w4uCSSes.html" class="language-box" title="Aprender CSS">
         <img src="IMAGES/LOGOCSS.png" alt="Logo CSS">
-        <p>CSS</p>
+       <p>CSS</p>
       </a>
     </div>
 
