--- a/WEB4U/w4uhtmles.html
+++ b/WEB4U/w4uhtmles.html
@@ -235,7 +235,7 @@ footer {
 
 <footer>
   <p>Web4U. José Manuel Moreno Raya.</p>
- <p><a href="w4uhtmleng.html" target="_blank">
+ <p><a href="w4uhtmleng.html">
        Inglés
       </a>
     </p>
