--- a/WEB4U/w4ucsses.html
+++ b/WEB4U/w4ucsses.html
@@ -230,8 +230,13 @@ div {
   </article>
 </section>
 
-<footer>
-  <p>Web4U © 2025 · José Manuel Moreno Raya.</p>
+     
+        <footer>
+  <p>Web4U. José Manuel Moreno Raya.</p>
+ <p><a href="w4ucsseng.html">
+       Inglés
+      </a>
+    </p>
 </footer>
 
 </body>
