--- a/WEB4U/w4usvges.html
+++ b/WEB4U/w4usvges.html
@@ -223,8 +223,13 @@ footer {
   </article>
 </section>
 
-<footer>
-  <p>Web4U © 2025 · José Manuel Moreno Raya.</p>
+     
+        <footer>
+  <p>Web4U. José Manuel Moreno Raya.</p>
+ <p><a href="w4usvgeng.html">
+       Inglés
+      </a>
+    </p>
 </footer>
 
 </body>
