Update footer content in w4uindexes.html

--- a/WEB4U/w4uindexes.html
+++ b/WEB4U/w4uindexes.html
@@ -151,8 +151,11 @@ footer {
 </section>
 
 <footer>
-  <p>Web4U © 2025 · José Manuel Moreno Raya.</p>
+  <p>Web4U. José Manuel Moreno Raya.</p>
+ <p><a href="w4uindexes.html">
+       Inglés
+      </a>
+    </p>
 </footer>
-
 </body>
 </html>
