--- a/WEB4U/w4uindexeng.html
+++ b/WEB4U/w4uindexeng.html
@@ -150,7 +150,11 @@ footer {
 </section>
 
 <footer>
-  <p>Web4U © 2025 · José Manuel Moreno Raya.</p>
+  <p>Web4U. José Manuel Moreno Raya.</p>
+ <p><a href="w4uindexes.html">
+       Spanish
+      </a>
+    </p>
 </footer>
 
 </body>
