--- a/WEB4U/w4uindexes.html
+++ b/WEB4U/w4uindexes.html
@@ -137,7 +137,7 @@ footer {
         <p>SVG</p>
       </a>
 
-      <a href="w4uCSSes.html" class="language-box" title="Aprender CSS">
+      <a href="w4ucsses.html" class="language-box" title="Aprender CSS">
         <img src="IMAGES/LOGOCSS.png" alt="Logo CSS">
        <p>CSS</p>
       </a>
