--- a/WEB4U/w4usvgeng.html
+++ b/WEB4U/w4usvgeng.html
@@ -1,1 +1,233 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Web4U - SVG</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<style>
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+}
+
+/* Style the header */
+header {
+  background-color: #1e1e1e;
+  padding: 30px;
+  text-align: center;
+  font-size: 35px;
+  color: #00d0ff;
+  letter-spacing: 2px;
+}
+
+/* Create two columns/boxes */
+nav {
+  float: left;
+  width: 25%;
+  background: #ccc;
+  padding: 20px;
+}
+
+nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+nav a {
+  text-decoration: none;
+  font-weight: bold;
+  color: #333;
+}
+
+nav a:hover {
+  color: #00a8cc;
+}
+
+article {
+  float: left;
+  padding: 20px;
+  width: 75%;
+  background-color: #f7f7f7;
+  min-height: 350px;
+}
+
+section::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Footer */
+footer {
+  background-color: #1e1e1e;
+  padding: 10px;
+  text-align: center;
+  color: white;
+  font-size: 14px;
+}
+
+@media (max-width: 600px) {
+  nav, article {
+    width: 100%;
+    height: auto;
+  }
+}
+
+.toc-box {
+  background: #e2e2e2;
+  padding: 15px;
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+</style>
+</head>
+
+<body>
+
+<h2 style="text-align:center; padding-top:10px;">Welcome to Web4U</h2>
+
+<header>
+  <h2>SVG</h2>
+</header>
+
+<section>
+  <nav>
+    <ul>
+      <li><a href="w4uhtmleng.html">HTML</a></li>
+      <li><a href="w4usvgeng.html">SVG</a></li>
+      <li><a href="w4ucsseng.html">CSS</a></li> 
+    </ul>
+  </nav>
+  
+  <article>
+    <h1>Fundamental SVG Elements</h1>
+    <p>Below you will find explanations and examples of some essential SVG elements.</p>
+
+    <!-- TABLE OF CONTENTS -->
+    <div class="toc-box">
+      <h2>Table of Contents</h2>
+      <ul>
+        <li><a href="#svg">1. &lt;svg&gt; Container</a></li>
+        <li><a href="#rect">2. Rectangles &lt;rect&gt;</a></li>
+        <li><a href="#circle">3. Circles &lt;circle&gt;</a></li>
+        <li><a href="#path">4. Paths &lt;path&gt;</a></li>
+        <li><a href="#text">5. Text &lt;text&gt;</a></li>
+      </ul>
+    </div>
+
+    <!-- ======================= -->
+    <!--       <svg> TAG         -->
+    <!-- ======================= -->
+
+    <h2 id="svg">1. &lt;svg&gt; Container</h2>
+    <p>The main container for SVG graphics. Every SVG element must be inside it.</p>
+
+    <pre><code>
+&lt;svg width="200" height="200"&gt;
+  &lt;!-- Graphic elements go here --&gt;
+&lt;/svg&gt;
+    </code></pre>
+
+    <p>
+      More information:  
+      <a href="https://www.w3schools.com/graphics/svg_intro.asp" target="_blank">
+        W3Schools — SVG Introduction
+      </a>
+    </p>
+
+    <!-- ======================= -->
+    <!--       <rect> TAG        -->
+    <!-- ======================= -->
+
+    <h2 id="rect">2. Rectangles &lt;rect&gt;</h2>
+    <p>Allows you to draw rectangles inside an SVG.</p>
+
+    <pre><code>
+&lt;svg width="200" height="200"&gt;
+  &lt;rect x="10" y="10" width="100" height="50" fill="blue"&gt;&lt;/rect&gt;
+&lt;/svg&gt;
+    </code></pre>
+
+    <p>
+      More information:  
+      <a href="https://www.w3schools.com/graphics/svg_rect.asp" target="_blank">
+        W3Schools — SVG Rectangles
+      </a>
+    </p>
+
+    <!-- ======================= -->
+    <!--       <circle> TAG      -->
+    <!-- ======================= -->
+
+    <h2 id="circle">3. Circles &lt;circle&gt;</h2>
+    <p>Draws a circle using coordinates and radius.</p>
+
+    <pre><code>
+&lt;svg width="200" height="200"&gt;
+  &lt;circle cx="50" cy="50" r="40" fill="red"&gt;&lt;/circle&gt;
+&lt;/svg&gt;
+    </code></pre>
+
+    <p>
+      More information:  
+      <a href="https://www.w3schools.com/graphics/svg_circle.asp" target="_blank">
+        W3Schools — SVG Circles
+      </a>
+    </p>
+
+    <!-- ======================= -->
+    <!--        <path> TAG       -->
+    <!-- ======================= -->
+
+    <h2 id="path">4. Paths &lt;path&gt;</h2>
+    <p>Used to draw complex shapes by defining a route with commands.</p>
+
+    <pre><code>
+&lt;svg width="200" height="200"&gt;
+  &lt;path d="M10 80 C 40 10, 65 10, 95 80 S 150 150, 180 80" stroke="black" fill="transparent"&gt;&lt;/path&gt;
+&lt;/svg&gt;
+    </code></pre>
+
+    <p>
+      More information:  
+      <a href="https://www.w3schools.com/graphics/svg_path.asp" target="_blank">
+        W3Schools — SVG Paths
+      </a>
+    </p>
+
+    <!-- ======================= -->
+    <!--        <text> TAG       -->
+    <!-- ======================= -->
+
+    <h2 id="text">5. Text &lt;text&gt;</h2>
+    <p>Allows you to add text inside an SVG graphic.</p>
+
+    <pre><code>
+&lt;svg width="200" height="200"&gt;
+  &lt;text x="10" y="50" font-family="Arial" font-size="20" fill="green"&gt;Hello SVG&lt;/text&gt;
+&lt;/svg&gt;
+    </code></pre>
+
+    <p>
+      More information:
+      <a href="https://www.w3schools.com/graphics/svg_text.asp" target="_blank">
+        W3Schools — SVG Text
+      </a>
+    </p>
+
+  </article>
+</section>
+
+<footer>
+  <p>Web4U. José Manuel Moreno Raya.</p>
+  <p><a href="w4usvges.html">Spanish</a></p>
+</footer>
+
+</body>
+</html>
 
