--- a/WEB4U/w4ucsses.html
+++ b/WEB4U/w4ucsses.html
@@ -98,9 +98,9 @@ footer {
 <section>
   <nav>
     <ul>
-      <li><a href="html.html">HTML</a></li>
-      <li><a href="svg.html">SVG</a></li>
-      <li><a href="css.html">CSS</a></li> 
+      <li><a href="w4uhtmles.html">HTML</a></li>
+      <li><a href="w4usvges.html">SVG</a></li>
+      <li><a href="w4ucsses.html">CSS</a></li> 
     </ul>
   </nav>
   
