--- a/WEB4U/w4ucsseng.html
+++ b/WEB4U/w4ucsseng.html
@@ -98,9 +98,9 @@ footer {
 <section>
   <nav>
     <ul>
-      <li><a href="html.html">HTML</a></li>
-      <li><a href="svg.html">SVG</a></li>
-      <li><a href="css.html">CSS</a></li> 
+      <li><a href="w4uhtmleng.html">HTML</a></li>
+      <li><a href="w4usvgeng.html">SVG</a></li>
+      <li><a href="w4ucsseng.html">CSS</a></li> 
     </ul>
   </nav>
   
