Update navigation links in w4uhtmleng.html

--- a/WEB4U/w4uhtmleng.html
+++ b/WEB4U/w4uhtmleng.html
@@ -198,11 +198,11 @@ footer {
 
     <ul>
 
-      <li><a href="#">HTML</a></li>
+      <li><a href="w4uhtmleng.html">HTML</a></li>
 
-      <li><a href="#">SVG</a></li>
+      <li><a href="w4usvgeng.html">SVG</a></li>
 
-      <li><a href="#">CSS</a></li> 
+      <li><a href="w4ucsseng.html">CSS</a></li> 
 
     </ul>
 
