Change Spanish link color to yellow

--- a/WEB4U/w4usvgeng.html
+++ b/WEB4U/w4usvgeng.html
@@ -225,7 +225,7 @@ footer {
 
 <footer>
   <p>Web4U. José Manuel Moreno Raya.</p>
-  <p><a href="w4usvges.html">Spanish</a></p>
+  <p><a href="w4usvges.html" style="color: yellow;>Spanish</a></p>
 </footer>
 
 </body>
