Fix HTML footer link formatting

--- a/WEB4U/w4usvges.html
+++ b/WEB4U/w4usvges.html
@@ -226,7 +226,7 @@ footer {
      
         <footer>
   <p>Web4U. José Manuel Moreno Raya.</p>
- <p><a href="w4usvgeng.html" style="color: yellow;>
+ <p><a href="w4usvgeng.html" style="color: yellow;">
        Inglés
       </a>
     </p>
