Fix HTML footer link formatting

--- a/WEB4U/w4uindexeng.html
+++ b/WEB4U/w4uindexeng.html
@@ -151,7 +151,7 @@ footer {
 
 <footer>
   <p>Web4U. José Manuel Moreno Raya.</p>
- <p><a href="w4uindexes.html" style="color: yellow;>
+ <p><a href="w4uindexes.html" style="color: yellow;">
        Spanish
       </a>
     </p>
