Fix HTML syntax for footer link

--- a/WEB4U/w4ucsseng.html
+++ b/WEB4U/w4ucsseng.html
@@ -232,7 +232,7 @@ div {
 
 <footer>
   <p>Web4U. José Manuel Moreno Raya.</p>
-  <p><a href="w4ucsses.html" style="color: yellow;>Spanish</a></p>
+  <p><a href="w4ucsses.html" style="color: yellow;">Spanish</a></p>
 </footer>
 
 </body>
