--- a/WEB4U/w4uindexes.html
+++ b/WEB4U/w4uindexes.html
@@ -152,7 +152,7 @@ footer {
 
 <footer>
   <p>Web4U. José Manuel Moreno Raya.</p>
- <p><a href="w4uindexes.html" style="color: yellow;">
+ <p><a href="w4uindexeng.html" style="color: yellow;">
        Inglés
       </a>
     </p>
