--- a/WEB4U/w4usvgeng.html
+++ b/WEB4U/w4usvgeng.html
@@ -152,7 +152,7 @@ footer {
   &lt;rect x="10" y="10" width="100" height="50" fill="blue"&gt;&lt;/rect&gt;
 &lt;/svg&gt;
     </code></pre>
- <img src="svg2.png" style="border: 5px solid gray; border-radius: 10px;">
+ <img src="IMAGES/svg2.png" style="border: 5px solid gray; border-radius: 10px;">
     
     <p>
       More information:  
@@ -173,7 +173,7 @@ footer {
   &lt;circle cx="50" cy="50" r="40" fill="red"&gt;&lt;/circle&gt;
 &lt;/svg&gt;
     </code></pre>
- <img src="svg3.png" style="border: 5px solid gray; border-radius: 10px;">
+ <img src="IMAGES/svg3.png" style="border: 5px solid gray; border-radius: 10px;">
     <p>
       More information:  
       <a href="https://www.w3schools.com/graphics/svg_circle.asp" target="_blank">
@@ -193,7 +193,7 @@ footer {
   &lt;path d="M10 80 C 40 10, 65 10, 95 80 S 150 150, 180 80" stroke="black" fill="transparent"&gt;&lt;/path&gt;
 &lt;/svg&gt;
     </code></pre>
- <img src="svg4.png" style="border: 5px solid gray; border-radius: 10px;">
+ <img src="IMAGES/svg4.png" style="border: 5px solid gray; border-radius: 10px;">
     <p>
       More information:  
       <a href="https://www.w3schools.com/graphics/svg_path.asp" target="_blank">
@@ -213,7 +213,7 @@ footer {
   &lt;text x="10" y="50" font-family="Arial" font-size="20" fill="green"&gt;Hello SVG&lt;/text&gt;
 &lt;/svg&gt;
     </code></pre>
- <img src="svg5ingles.png" style="border: 5px solid gray; border-radius: 10px;">
+ <img src="IMAGES/svg5ingles.png" style="border: 5px solid gray; border-radius: 10px;">
     <p>
       More information:
       <a href="https://www.w3schools.com/graphics/svg_text.asp" target="_blank">
