--- a/WEB4U/w4usvges.html
+++ b/WEB4U/w4usvges.html
@@ -153,7 +153,7 @@ footer {
 &lt;/svg&gt;
     </code></pre>
 
-    <img src="svg2.png" style="border: 5px solid gray; border-radius: 10px;">
+    <img src="IMAGES/svg2.png" style="border: 5px solid gray; border-radius: 10px;">
     <p>
       Más información:  
       <a href="https://www.w3schools.com/graphics/svg_rect.asp" target="_blank">
@@ -175,7 +175,7 @@ footer {
   &lt;circle cx="50" cy="50" r="40" fill="red"&gt;&lt;/circle&gt;
 &lt;/svg&gt;
     </code></pre>
-   <img src="svg3.png" style="border: 5px solid gray; border-radius: 10px;">
+   <img src="IMAGES/svg3.png" style="border: 5px solid gray; border-radius: 10px;">
     <p>
       Más información:  
       <a href="https://www.w3schools.com/graphics/svg_circle.asp" target="_blank">
@@ -196,7 +196,7 @@ footer {
   &lt;path d="M10 80 C 40 10, 65 10, 95 80 S 150 150, 180 80" stroke="black" fill="transparent"&gt;&lt;/path&gt;
 &lt;/svg&gt;
     </code></pre>
- <img src="svg4.png" style="border: 5px solid gray; border-radius: 10px;">
+ <img src="IMAGES/svg4.png" style="border: 5px solid gray; border-radius: 10px;">
     <p>
       Más información:  
       <a href="https://www.w3schools.com/graphics/svg_path.asp" target="_blank">
@@ -217,7 +217,7 @@ footer {
   &lt;text x="10" y="50" font-family="Arial" font-size="20" fill="green"&gt;Hola SVG&lt;/text&gt;
 &lt;/svg&gt;
     </code></pre>
- <img src="svg5español.png" style="border: 5px solid gray; border-radius: 10px;">
+ <img src="IMAGES/svg5español.png" style="border: 5px solid gray; border-radius: 10px;">
     <p>
       Más información:
       <a href="https://www.w3schools.com/graphics/svg_text.asp" target="_blank">
