Add images with styling to CSS examples

--- a/WEB4U/w4ucsses.html
+++ b/WEB4U/w4ucsses.html
@@ -133,7 +133,7 @@ p {
   background-color: yellow;
 }
     </code></pre>
-
+  <img src="IMAGES/css1.png" style="border: 5px solid gray; border-radius: 10px;">
     <p>
       Más información:  
       <a href="https://www.w3schools.com/css/css_colors.asp" target="_blank">
@@ -155,7 +155,7 @@ h1 {
   font-weight: bold;
 }
     </code></pre>
-
+  <img src="IMAGES/css2.png" style="border: 5px solid gray; border-radius: 10px;">
     <p>
       Más información:  
       <a href="https://www.w3schools.com/css/css_font.asp" target="_blank">
@@ -176,7 +176,7 @@ div {
   padding: 10px;
 }
     </code></pre>
-
+  <img src="IMAGES/css3.png" style="border: 5px solid gray; border-radius: 10px;">
     <p>
       Más información:  
       <a href="https://www.w3schools.com/css/css_margin.asp" target="_blank">
@@ -197,7 +197,7 @@ div {
   border-radius: 10px;
 }
     </code></pre>
-
+  <img src="IMAGES/css4.png" style="border: 5px solid gray; border-radius: 10px;">
     <p>
       Más información:  
       <a href="https://www.w3schools.com/css/css_border.asp" target="_blank">
@@ -219,7 +219,7 @@ div {
   align-items: center;
 }
     </code></pre>
-
+  <img src="IMAGES/css5.png" style="border: 5px solid gray; border-radius: 10px;">
     <p>
       Más información:
       <a href="https://www.w3schools.com/css/css3_flexbox.asp" target="_blank">
