--- a/WEB4U/w4uhtmleng.html
+++ b/WEB4U/w4uhtmleng.html
@@ -260,7 +260,7 @@ footer {
 &lt;h1&gt;Welcome to my page&lt;/h1&gt;
 &lt;h2&gt;About me&lt;/h2&gt;
     </code></pre>
-
+  <img src="IMAGES/html1ingles.png" style="border: 5px solid gray; border-radius: 10px;">
 
 
     <p>
@@ -299,7 +299,7 @@ footer {
 &lt;/a&gt;
 
     </code></pre>
-
+ <img src="IMAGES/html2ingles.png" style="border: 5px solid gray; border-radius: 10px;">
 
 
     <p>
@@ -332,7 +332,7 @@ footer {
 <pre><code>
 &lt;img src="imagenes/logo.png" alt="Example logo" width="200"&gt;
     </code></pre>
-
+ <img src="IMAGES/html3.png" style="border: 5px solid gray; border-radius: 10px;">
 
 
     <p>
@@ -374,7 +374,7 @@ footer {
   &lt;input type="submit" value="Submit"&gt;
 &lt;/form&gt;
     </code></pre>
-
+ <img src="IMAGES/html4ingles.png" style="border: 5px solid gray; border-radius: 10px;">
 
 
     <p>
@@ -416,7 +416,7 @@ footer {
   &lt;/tr&gt;
 &lt;/table&gt;
     </code></pre>
-
+ <img src="IMAGES/html5ingles.png" style="border: 5px solid gray; border-radius: 10px;">
 
     <p>
 
